--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     },
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
+            "matches": ["*://www.messenger.com/*", "*://www.facebook.com/messages/*"],
             "js": ["content.js"]
         }
     ],
